development/cicd/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-jenkins
  namespace: devops
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
     app: jenkins-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32447
